# JimInABox

./: .gitignore  README.md  jim-in-a-box.code-workspace  main.py  pyproject.toml  requirements.txt
metrics_server/: app.py  handlers.py  logger.py  routes.py  serializer.py  server.py
metrics_server/config/: metric_data.json  metric_data.py  metrics_data.py  routes.json  routes.py
metrics_server/data/: metrics.json  requirements.txt
tests/: test_app.py  test_serializer.py  test_server.py
tests/test_metrics_server/: test_app.py
