[tool.poetry]
name = "jim-in-a-box"
version = "0.1.0"
description = "A metrics server written in Python"
authors = ["Levi McDonough <levimcdonough@gmail.com>"]
readme = "README.md"

packages = [{ include = "metrics_server" }]

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.1.0"
rich = "^13.9.4"
python-dotenv = "^1.0.1"
ipython = "^8.31.0"
ipdb = "^0.13.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.scripts]
jim-in-a-box = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
